--- a/root/css/style.css
+++ b/root/css/style.css
@@ -136,6 +136,40 @@ footer{
 }
 
 /*HOME PAGE STYLING*/
+.hometext
+{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.homeimages {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.homeimages1, .homeimages2
+{
+    width: 50%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.homeimages1 img, .homeimages2 img
+{
+width: 100%;
+justify-content: left;
+}
+
 
 
 
